Added CSS to navigation elements

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div id="right-side">
             <a href="#">Gmail</a>
             <a href="#">Images</a>
-            <i id="grid" class="fas fa-th"></i>
-            <i id="bell" class="fas fa-bell"></i>
+            <i id="grid" class="fas fa-th" alt="apps"></i>
+            <i id="bell" class="fas fa-bell" alt="notifications"></i>
             <img id="google-img" src="./images/doge-icon.png" alt="google profile image"/>
 
         </div>
