Added Google Home Image

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
             <i id="grid" class="fas fa-th" alt="apps"></i>
             <i id="bell" class="fas fa-bell" alt="notifications"></i>
             <img id="google-img" src="./images/doge-icon.png" alt="google profile image"/>
-
         </div>
+    </div>
+    <!-- Middle Section - Search Box -->
+    <div class="search-box"> 
+        <img id="google-home" src="./images/googlehome.png" alt="google home page logo"/> 
+        
     </div>
     
 </body>
