Made search bar and buttons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
     <!-- Middle Section - Search Box -->
     <div class="search-box"> 
         <img id="google-home" src="./images/googlehome.png" alt="google home page logo"/> 
-        
+        <form id="form-box">
+            <input id="search-bar" placeholder="Search Google or type a URL"/> 
+            <img id="microphone" src="./images/microphone.png"/> 
+        </form>
+        <div class="search-buttons"> 
+            <button class="buttons">Google Search</button>
+            <button class="buttons">I'm Feeling Lucky</button>
+        </div>
     </div>
     
 </body>
