--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Top Section - Navigation -->
     <div id="navigation">
         <div id="left-side">
-            <a href="#">About</a>
+            <a href="https://www.google.com/intl/en/about.html?fg=1">About</a>
             <a href="#">Store</a>
         </div>
         <div id="right-side">
@@ -42,6 +42,21 @@
             <button class="buttons">I'm Feeling Lucky</button>
         </div>
     </div>
+    <!-- Bottom Section - with Site Links -->
+    <footer> 
+        <div id="bottom-links">
+            <div id="footer-left">
+                <a href="https://www.google.com/intl/en/ads/?fg=1">Advertising</a>
+                <a href="https://www.google.com/services/?fg=1">Business</a>
+            </div>
+            <div id="footer-right"> 
+                <a href="https://www.google.com/intl/en/policies/privacy/?fg=1">Privacy</a>
+                <a href="https://www.google.com/intl/en/policies/terms/?fg=1">Terms</a>
+                <a href="https://www.google.com/preferences?hl=en">Settings</a>
+            </div>
+
+        </div>
+    </footer>
     
 </body>
 </html>
